--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -237,7 +237,7 @@
     }
   }
 
-  @include breakpoint(xsmall) {
+  @include breakpoint(small) {
     padding: 1.5rem 0;
 
     .content {
