--- a/styles/layout/_wrapper.scss
+++ b/styles/layout/_wrapper.scss
@@ -12,10 +12,11 @@
   @include vendor("align-items", "center");
   @include vendor("justify-content", "center");
   position: relative;
-  min-height: 100vh;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   padding: 4rem 2rem;
   z-index: 3;
+  overflow: scroll;
 
   &:before {
     content: "";
